--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
-<!-- Open template.js, paste your Program into the commented part and 
-Save As NameOfProgram.js
-then at the bottom of this page, change  
-<script src="template.js"></script>  to 
-<script src="NameOfProgram.js"></script> 
-and Save as NameOfProgram.html -->
+<!-- HAY GET AWAY FROM HERE -->
 
 <!DOCTYPE html>
 <!-- start of the document -->
